<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/txtvShowingOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_btw_views"
        android:layout_marginTop="@dimen/margin_btw_views"
        android:text="kanha is doing"
        android:textAppearance="@style/SpecificKeyboard.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_btw_views"
        android:layout_marginTop="@dimen/margin_btw_views"
        android:text="@string/name_label_text"
        android:textAppearance="@style/SpecificKeyboard.Subtitle1"
        android:textSize="@dimen/textsize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvShowingOrder" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:ems="10"
        android:hint="@string/hint_in_edittext"
        android:inputType="textPersonName"
        android:textAppearance="@style/SpecificKeyboard.Caption"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_btw_views"
        android:layout_marginTop="@dimen/margin_btw_views"
        android:text="@string/adress_label"
        android:textAppearance="@style/SpecificKeyboard.Subtitle1"
        android:textSize="@dimen/textsize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_label" />

    <EditText
        android:id="@+id/adress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:ems="10"
        android:hint="@string/adress_hint"
        android:inputType="textMultiLine"
        android:textAppearance="@style/SpecificKeyboard.Caption"
        app:layout_constraintBaseline_toBaselineOf="@+id/address_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_btw_views"
        android:layout_marginTop="@dimen/margin_btw_views"
        android:text="@string/phone_label"
        android:textAppearance="@style/SpecificKeyboard.Subtitle1"
        android:textSize="@dimen/textsize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adress_text" />


    <EditText
        android:id="@+id/phone_text"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:textAppearance="@style/SpecificKeyboard.Caption"
        app:layout_constraintBaseline_toBaselineOf="@id/phone_label"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/label_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@id/phone_text"
        app:layout_constraintStart_toEndOf="@id/phone_label"
        app:layout_constraintTop_toBottomOf="@id/adress_text" />

    <TextView
        android:id="@+id/note_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_btw_views"
        android:layout_marginTop="@dimen/margin_btw_views"
        android:text="@string/note_label_text"
        android:textAppearance="@style/SpecificKeyboard.Subtitle1"
        android:textSize="@dimen/textsize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_label" />

    <EditText
        android:id="@+id/note_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:ems="10"
        android:hint="@string/note_hint"
        android:inputType="textMultiLine|textCapSentences"
        android:textAppearance="@style/SpecificKeyboard.Caption"
        app:layout_constraintBaseline_toBaselineOf="@id/note_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/delivery_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/delivery_label"
        android:textAppearance="@style/SpecificKeyboard.Headline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_text" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_btw_views"
        android:layout_marginTop="@dimen/margin_btw_views"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delivery_label">

        <RadioButton
            android:id="@+id/sameday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radioButtonClicked"
            android:text="@string/same_day_message"
            android:textAppearance="@style/SpecificKeyboard.Subtitle2" />

        <RadioButton
            android:id="@+id/nextday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="radioButtonClicked"
            android:text="@string/next_day_message"
            android:textAppearance="@style/SpecificKeyboard.Subtitle2" />

        <RadioButton
            android:id="@+id/pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radioButtonClicked"
            android:text="@string/pickUP_message"
            android:textAppearance="@style/SpecificKeyboard.Subtitle2" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Buy"
        android:textAppearance="@style/SpecificKeyboard.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>